[gd_scene load_steps=22 format=2]

[ext_resource path="res://gui/hud/water_meter/water_meter.gd" type="Script" id=1]
[ext_resource path="res://gui/hud/water_meter/water_meter_surface.png" type="Texture" id=2]
[ext_resource path="res://gui/hud/water_meter/water_meter_mask_bottom.png" type="Texture" id=3]
[ext_resource path="res://gui/hud/water_meter/water_meter_mask_filler.png" type="Texture" id=4]
[ext_resource path="res://actors/items/fludd_box/nozzle_turbo.png" type="Texture" id=5]
[ext_resource path="res://gui/hud/water_meter/water_meter_power_mask.png" type="Texture" id=6]
[ext_resource path="res://gui/hud/water_meter/water_meter_bottom.png" type="Texture" id=7]
[ext_resource path="res://gui/hud/water_meter/water_meter_fill.png" type="Texture" id=8]
[ext_resource path="res://gui/hud/water_meter/water_meter_power_filler_cover.png" type="Texture" id=9]
[ext_resource path="res://gui/hud/water_meter/water_meter_bubble_small.png" type="Texture" id=10]
[ext_resource path="res://gui/hud/water_meter/water_meter_bubble_big.png" type="Texture" id=11]
[ext_resource path="res://actors/items/fludd_box/nozzle_rocket.png" type="Texture" id=12]
[ext_resource path="res://gui/hud/water_meter/water_meter_bubble_medium.png" type="Texture" id=13]
[ext_resource path="res://gui/hud/water_meter/water_meter_cover.png" type="Texture" id=14]
[ext_resource path="res://gui/hud/water_meter/water_meter_max.png" type="Texture" id=15]
[ext_resource path="res://actors/items/fludd_box/nozzle_hover.png" type="Texture" id=16]
[ext_resource path="res://gui/hud/water_meter/water_meter_power_filler.png" type="Texture" id=17]
[ext_resource path="res://gui/hud/water_meter/water_meter_mask_canvas.png" type="Texture" id=18]
[ext_resource path="res://gui/hud/water_meter/water_meter_frame.png" type="Texture" id=19]
[ext_resource path="res://fonts/white/gui_white.fnt" type="BitmapFont" id=20]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "hover",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "turbo",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "rocket",
"speed": 5.0
} ]

[node name="MeterControl" type="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -57.0
margin_top = -113.0
margin_right = -15.0
margin_bottom = -16.0
rect_pivot_offset = Vector2( 57, 113 )
mouse_filter = 2

[node name="WaterMeter" type="Sprite" parent="."]
light_mask = -2147483648
z_index = 4
texture = ExtResource( 19 )
centered = false
script = ExtResource( 1 )

[node name="BubbleMask" type="Light2D" parent="WaterMeter"]
position = Vector2( 16, 26 )
texture = ExtResource( 18 )
mode = 3
range_layer_min = 1
range_layer_max = 1
range_item_cull_mask = 2

[node name="BubbleMaskFiller" type="Light2D" parent="WaterMeter/BubbleMask"]
position = Vector2( 0, 62 )
scale = Vector2( 1, -79 )
texture = ExtResource( 4 )
mode = 2
range_layer_min = 1
range_layer_max = 1
range_item_cull_mask = 2

[node name="BubbleMaskBottom" type="Light2D" parent="WaterMeter/BubbleMask"]
position = Vector2( 0, 65.5 )
texture = ExtResource( 3 )
mode = 2
range_layer_min = 1
range_layer_max = 1
range_item_cull_mask = 2

[node name="Bottom" type="Sprite" parent="WaterMeter"]
position = Vector2( 2, 88 )
z_index = -2
texture = ExtResource( 7 )
centered = false

[node name="Filler" type="Sprite" parent="WaterMeter"]
position = Vector2( 0, 88 )
scale = Vector2( 1, 79 )
z_index = -3
texture = ExtResource( 8 )
centered = false
offset = Vector2( 1, -1 )

[node name="Surface" type="Sprite" parent="WaterMeter"]
z_index = -1
texture = ExtResource( 2 )
centered = false

[node name="BubblesBig" type="CPUParticles2D" parent="WaterMeter"]
light_mask = 2
position = Vector2( 16, 103 )
z_index = -2
lifetime = 2.5
preprocess = 2.0
texture = ExtResource( 11 )
emission_shape = 2
emission_rect_extents = Vector2( 15, 0 )
direction = Vector2( 0, -1 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 60.0
initial_velocity_random = 0.2

[node name="BubblesMedium" type="CPUParticles2D" parent="WaterMeter"]
light_mask = 2
position = Vector2( 16, 103 )
z_index = -2
amount = 7
lifetime = 2.5
preprocess = 2.0
texture = ExtResource( 13 )
emission_shape = 2
emission_rect_extents = Vector2( 15, 0 )
direction = Vector2( 0, -1 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 60.0
initial_velocity_random = 0.2

[node name="BubblesSmall" type="CPUParticles2D" parent="WaterMeter"]
light_mask = 2
position = Vector2( 16, 103 )
z_index = -2
amount = 6
lifetime = 2.5
preprocess = 2.0
texture = ExtResource( 10 )
emission_shape = 2
emission_rect_extents = Vector2( 15, 0 )
direction = Vector2( 0, -1 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 60.0
initial_velocity_random = 0.2

[node name="WaterMeterLabel" type="Label" parent="WaterMeter"]
margin_left = 1.0
margin_top = 40.0
margin_right = 31.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 20 )
align = 1

[node name="Max" type="Sprite" parent="WaterMeter"]
position = Vector2( 15.5, 48 )
z_index = 1
texture = ExtResource( 15 )

[node name="PowerFiller" type="Sprite" parent="WaterMeter"]
light_mask = 4
position = Vector2( 35, 90 )
scale = Vector2( 4, 83 )
texture = ExtResource( 17 )
centered = false
offset = Vector2( 0, -1 )

[node name="Cover" type="Sprite" parent="WaterMeter/PowerFiller"]
modulate = Color( 1, 1, 1, 0 )
light_mask = 4
texture = ExtResource( 9 )
centered = false
offset = Vector2( 0, -1 )

[node name="PowerMask" type="Light2D" parent="WaterMeter"]
position = Vector2( 37, 90 )
texture = ExtResource( 6 )
range_layer_min = 1
range_layer_max = 1
range_item_cull_mask = 4

[node name="Cover" type="Sprite" parent="WaterMeter"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 1, 2 )
texture = ExtResource( 14 )
centered = false

[node name="Icon" type="AnimatedSprite" parent="WaterMeter"]
position = Vector2( 16, -4 )
z_index = 4
frames = SubResource( 6 )
animation = "hover"
